# canvas-lib

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  package-lock.json  package.json
SampleBase/src/Emscripten/: InputControllerEmscripten.cpp
assets/: cube.psh  cube.vsh
demo/: package.json  vite.config.ts
demo/public/: canvas-lib.data
demo/src/: lib.ts  main.ts
pkg/: canvas-lib.mjs  index.d.ts  index.js  package.json
src/: lib.cpp  lib.hpp  main.cpp  main.hpp
